--- a/next/src/app/globals.css
+++ b/next/src/app/globals.css
@@ -5,6 +5,11 @@
   --foreground: #171717;
 }
 
+[data-theme='dark'] {
+  --foreground: #ffffff;
+  --background: #171717;
+}
+
 @theme inline {
   --color-background: var(--background);
   --color-foreground: var(--foreground);
