--- a/next/src/app/globals.css
+++ b/next/src/app/globals.css
@@ -1,15 +1,38 @@
 @import "tailwindcss";
 
+/* Light theme color variables */
 :root {
-  --background: #ffffff;
   --foreground: #171717;
+  --background: #ffffff;
+  --primary-50: oklch(0.05 0.1483 305.02);
+  --primary-100: oklch(0.1 0.1483 305.02);
+  --primary-200: oklch(0.2 0.1483 305.02);
+  --primary-300: oklch(0.3 0.1483 305.02);
+  --primary-400: oklch(0.4 0.1483 305.02);
+  --primary-500: oklch(0.5 0.1483 305.02);
+  --primary-600: oklch(0.6 0.1483 305.02);
+  --primary-700: oklch(0.7 0.1483 305.02);
+  --primary-800: oklch(0.8 0.1483 305.02);
+  --primary-900: oklch(0.9 0.1483 305.02);
 }
 
+/* Dark theme color variables */
 [data-theme='dark'] {
   --foreground: #ffffff;
-  --background: #171717;
+  --background: #242038;
+  --primary-50: oklch(0.05 0.1483 305.02);
+  --primary-100: oklch(0.1 0.1483 305.02);
+  --primary-200: oklch(0.2 0.1483 305.02);
+  --primary-300: oklch(0.3 0.1483 305.02);
+  --primary-400: oklch(0.4 0.1483 305.02);
+  --primary-500: oklch(0.5 0.1483 305.02);
+  --primary-600: oklch(0.6 0.1483 305.02);
+  --primary-700: oklch(0.7 0.1483 305.02);
+  --primary-800: oklch(0.8 0.1483 305.02);
+  --primary-900: oklch(0.9 0.1483 305.02);
 }
 
+/* Global Themes */
 @theme inline {
   --color-background: var(--background);
   --color-foreground: var(--foreground);
@@ -17,15 +40,27 @@
   --font-mono: var(--font-geist-mono);
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
+@theme {
+  --color-primary-50: var(--primary-50);
+  --color-primary-100: var(--primary-100);
+  --color-primary-200: var(--primary-200);
+  --color-primary-300: var(--primary-300);
+  --color-primary-400: var(--primary-400);
+  --color-primary-500: var(--primary-500);
+  --color-primary-600: var(--primary-600);
+  --color-primary-700: var(--primary-700);
+  --color-primary-800: var(--primary-800);
+  --color-primary-900: var(--primary-900);
+}
+
+@layer {
+  .page{
+    @apply m-4
   }
 }
 
-body {
+/* body {
   background: var(--background);
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
-}
+} */
