--- a/next/src/app/globals.css
+++ b/next/src/app/globals.css
@@ -1,35 +1,56 @@
 @import "tailwindcss";
-
+@custom-variant dark (&:where([data-theme=dark], [data-theme=dark] *));
 /* Light theme color variables */
 :root {
   --foreground: #171717;
   --background: #ffffff;
-  --primary-50: oklch(0.05 0.1483 305.02);
-  --primary-100: oklch(0.1 0.1483 305.02);
-  --primary-200: oklch(0.2 0.1483 305.02);
-  --primary-300: oklch(0.3 0.1483 305.02);
-  --primary-400: oklch(0.4 0.1483 305.02);
-  --primary-500: oklch(0.5 0.1483 305.02);
-  --primary-600: oklch(0.6 0.1483 305.02);
-  --primary-700: oklch(0.7 0.1483 305.02);
-  --primary-800: oklch(0.8 0.1483 305.02);
-  --primary-900: oklch(0.9 0.1483 305.02);
+  --primary-50: oklch(0.05 0.0497 207.5);
+  --primary-100: oklch(0.1 0.0497 207.5);
+  --primary-200: oklch(0.2 0.0497 207.5);
+  --primary-300: oklch(0.3 0.0497 207.5);
+  --primary-400: oklch(0.4 0.0497 207.5);
+  --primary-500: oklch(0.5 0.0497 207.5);
+  --primary-600: oklch(0.6 0.0497 207.5);
+  --primary-700: oklch(0.7 0.0497 207.5);
+  --primary-800: oklch(0.8 0.0497 207.5);
+  --primary-900: oklch(0.9 0.0497 207.5);
+  --secondary-50: oklch(0.05 0.034 261.69);
+  --secondary-100: oklch(0.1 0.034 261.69);
+  --secondary-200: oklch(0.2 0.034 261.69);
+  --secondary-300: oklch(0.3 0.034 261.69);
+  --secondary-400: oklch(0.4 0.034 261.69);
+  --secondary-500: oklch(0.5 0.034 261.69);
+  --secondary-600: oklch(0.6 0.034 261.69);
+  --secondary-700: oklch(0.7 0.034 261.69);
+  --secondary-800: oklch(0.8 0.034 261.69);
+  --secondary-900: oklch(0.9 0.034 261.69);
 }
 
 /* Dark theme color variables */
+/* It is reversed values of the light theme */
 [data-theme='dark'] {
   --foreground: #ffffff;
   --background: #242038;
-  --primary-50: oklch(0.05 0.1483 305.02);
-  --primary-100: oklch(0.1 0.1483 305.02);
-  --primary-200: oklch(0.2 0.1483 305.02);
-  --primary-300: oklch(0.3 0.1483 305.02);
-  --primary-400: oklch(0.4 0.1483 305.02);
-  --primary-500: oklch(0.5 0.1483 305.02);
-  --primary-600: oklch(0.6 0.1483 305.02);
-  --primary-700: oklch(0.7 0.1483 305.02);
-  --primary-800: oklch(0.8 0.1483 305.02);
-  --primary-900: oklch(0.9 0.1483 305.02);
+  --primary-50: oklch(0.9 0.0497 207.5);
+  --primary-100: oklch(0.8 0.0497 207.5);
+  --primary-200: oklch(0.7 0.0497 207.5);
+  --primary-300: oklch(0.6 0.0497 207.5);
+  --primary-400: oklch(0.5 0.0497 207.5);
+  --primary-500: oklch(0.4 0.0497 207.5);
+  --primary-600: oklch(0.3 0.0497 207.5);
+  --primary-700: oklch(0.2 0.0497 207.5);
+  --primary-800: oklch(0.1 0.0497 207.5);
+  --primary-900: oklch(0.05 0.0497 207.5);
+  --secondary-50: oklch(0.9 0.034 261.69);
+  --secondary-100: oklch(0.8 0.034 261.69);
+  --secondary-200: oklch(0.7 0.034 261.69);
+  --secondary-300: oklch(0.6 0.034 261.69);
+  --secondary-400: oklch(0.5 0.034 261.69);
+  --secondary-500: oklch(0.4 0.034 261.69);
+  --secondary-600: oklch(0.3 0.034 261.69);
+  --secondary-700: oklch(0.2 0.034 261.69);
+  --secondary-800: oklch(0.1 0.034 261.69);
+  --secondary-900: oklch(0.05 0.034 261.69);
 }
 
 /* Global Themes */
@@ -51,11 +72,25 @@
   --color-primary-700: var(--primary-700);
   --color-primary-800: var(--primary-800);
   --color-primary-900: var(--primary-900);
+  --color-secondary-50: var(--secondary-50);
+  --color-secondary-100: var(--secondary-100);
+  --color-secondary-200: var(--secondary-200);
+  --color-secondary-300: var(--secondary-300);
+  --color-secondary-400: var(--secondary-400);
+  --color-secondary-500: var(--secondary-500);
+  --color-secondary-600: var(--secondary-600);
+  --color-secondary-700: var(--secondary-700);
+  --color-secondary-800: var(--secondary-800);
+  --color-secondary-900: var(--secondary-900);
 }
 
 @layer {
   .page{
     @apply m-4
+  }
+
+  .header a{
+    @apply hover:underline hover:text-primary-200 hover:font-bold
   }
 }
 
