--- a/next/src/app/globals.css
+++ b/next/src/app/globals.css
@@ -89,6 +89,10 @@
     @apply m-4 min-h-screen
   }
 
+  .page h1{
+      @apply font-bold text-2xl
+    }
+
   .header a{
     @apply flex flex-col hover:underline hover:text-primary-200 hover:font-bold
   }
