--- a/next/src/app/globals.css
+++ b/next/src/app/globals.css
@@ -1,5 +1,11 @@
 @import "tailwindcss";
 @custom-variant dark (&:where([data-theme=dark], [data-theme=dark] *));
+
+body{
+  margin: 0;
+  padding: 0;
+}
+
 /* Light theme color variables */
 :root {
   --foreground: #171717;
@@ -30,7 +36,7 @@
 /* It is reversed values of the light theme */
 [data-theme='dark'] {
   --foreground: #ffffff;
-  --background: #242038;
+  --background: #171717;
   --primary-50: oklch(0.9 0.0497 207.5);
   --primary-100: oklch(0.8 0.0497 207.5);
   --primary-200: oklch(0.7 0.0497 207.5);
@@ -98,8 +104,7 @@
   }
 }
 
-/* body {
-  background: var(--background);
-  color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
-} */
+@components {
+
+}
+
