--- a/next/src/app/globals.css
+++ b/next/src/app/globals.css
@@ -1,10 +1,14 @@
 @import "tailwindcss";
 @custom-variant dark (&:where([data-theme=dark], [data-theme=dark] *));
 
+html{
+  scroll-behavior: smooth;
+}
+
 body{
   margin: 0;
   padding: 0;
-  @apply bg-background text-foreground
+  @apply bg-background text-foreground;
 }
 
 /* Light theme color variables */
